Fix text alignment

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -157,6 +157,14 @@ p {
     width: 110%;
 }
 
+.highlight-title {
+    text-align: left;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 5px;
+}
+
 .highlights {
     display: flex;
     padding: 40px 15vw 75px 15vw;
